--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -128,11 +128,7 @@
     justify-content: space-around;
     margin-bottom: 15px;
   }
-  ::before{
-    height: 100vh;
-    width: 100vw;
-    background-color: black;
-  }
+
 }
 nav{
     display: flex;
@@ -159,5 +155,34 @@ nav{
   }
   to {
     transform: scale(1) rotate(360deg);
+  }
+}
+@media only screen and (max-width: 850px) {
+  .search, nav{
+    width: 90vw;
+  }
+  .char-list{
+    margin: 0;
+    width: 90vw;
+    margin-top: 10px;
+  }
+  .main-home{
+    width: 90vw;
+    margin: 0;
+    margin-top: 25px;
+  }
+  .details{
+    margin-top: 15px;
+    &:hover{
+      transform: none;
+    }
+  }
+  .modal-char{
+    width: 100vw;
+    height: 80vh;
+    top: 10%;
+    left: 0%;
+    background-size: cover;
+    margin: 0 auto;
   }
 }
